--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>TheEndlessRun</title>
+    <title>The Endless Run</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <link rel="stylesheet" href="TemplateData/style.css" />
   </head>
@@ -11,6 +11,7 @@
     <div id="info-container">
       <h1>The Endless Run</h1>
       <h2 id="creators">By Janis & Severin</h2>
+      <a href="/highscores.html" id="highscores">High Scores</a>
       <div id="github-icon"></div>
       <p>GitHub</p>
       <a href="https://github.com/sevi361">sevi361</a>
@@ -93,6 +94,8 @@
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
+
+        location.href = "/mobile.html";
 
         var meta = document.createElement("meta");
         meta.name = "viewport";
